// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/training/question when invalid state should render component 1`] = `
Array [
  <header
    className="sc-jDwBTQ gwQURx"
  >
    <div
      className="sc-htoDjs kcwXek"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <span
        className="sc-iRbamj lmrvjd"
        color="#fff"
        data-test="back"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-1"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
          />
        </svg>
      </span>
    </div>
    <h1
      className="sc-gPEVay QCTmM"
    >
      百人一首 - 練習 -
    </h1>
  </header>,
  <div
    className="sc-Rmtcm cYKzNr"
  >
    <div
      className="sc-cMljjf lnjoVr"
    >
      <p
        className="sc-jAaTju inRTIw"
      >
        不正な遷移を行いました。前の画面からやり直してください。
      </p>
    </div>
  </div>,
]
`;

exports[`/training/question when valid state should render component 1`] = `
Array [
  <header
    className="sc-jDwBTQ gwQURx"
  >
    <div
      className="sc-htoDjs kcwXek"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <span
        className="sc-iRbamj lmrvjd"
        color="#fff"
        data-test="back"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-1"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
          />
        </svg>
      </span>
    </div>
    <h1
      className="sc-gPEVay QCTmM"
    >
      百人一首 - 練習 -
    </h1>
  </header>,
  <div
    className="sc-Rmtcm cYKzNr"
  >
    <div
      className="sc-cMljjf lnjoVr"
    >
      <p
        className="sc-jAaTju inRTIw"
      >
        指定した条件の歌はありませんでした
      </p>
    </div>
  </div>,
]
`;
